Fix issues with padding on mobile devices

--- a/style.scss
+++ b/style.scss
@@ -17,8 +17,8 @@
 
 .dotted-background {
   background-image: radial-gradient($neutralLighter 0.5px, transparent 0);
-  background-size: 20px 20px;
-  background-position: -20px -25px;
+  background-size: 20px 19px;
+  background-position: -20px -20px;
 }
 
 .thin-line-border {
@@ -39,18 +39,22 @@ body {
   @extend .dotted-background;
   font-family: $base-font-family;
   color: $neutralLighter;
-
+  padding: 0em 2em 0em 2em;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  @include mobile {
+    padding: 0em 0.9em 0em 0.9em;
+  }
 }
+
 section {
-  padding: 2em !important;
+  padding: 1em 0em 1em 0em;
   &#content {
-    padding: 1em !important;
+    padding: 1em 0em 1em 0em;
 
     @include mobile {
-      padding: 0em !important;
+      padding: 0.5em 0em 0.5em 0em;
     }
   }
 }
@@ -261,20 +265,21 @@ nav {
   @extend .thin-line-border, .transparent-blur-background;
   padding: 20px;
   border-top: none;
-  border-left: none;
-  border-right: none;
   width: 100%;
   float: right;
-
   font-family: $base-font-family;
   font-size: 25px;
 
   @include mobile {
     float: none;
-    margin-top: 9px;
+
     display: block;
     font-size: 16px;
     text-align: center;
+  }
+
+  #navMenu {
+    background-color: transparent;
   }
 
   .navbar-item {
@@ -283,11 +288,12 @@ nav {
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
-    transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-out;
 
     @include mobile {
       margin: 0 10px;
-      color: $secondaryDark;
+      font-weight: 400;
+      text-align: center;
     }
 
     &:hover {
@@ -306,10 +312,6 @@ nav {
 //
 // .main
 //
-#content {
-  padding: 1em !important;
-}
-
 .home {
   .hero {
     @extend .thin-line-border, .transparent-blur-background;
